--- a/public/vishwakarma.html
+++ b/public/vishwakarma.html
@@ -318,35 +318,43 @@
         <h4 class="modal-title">
             <span ng-show="SCREENS.login_mode == 'register'">Register</span>
             <span ng-show="SCREENS.login_mode == 'login'">Login</span>
+            <span class="pull-right" style="color: #ddd; font-weight: bold;">Vishwakarma Build System</span>
         </h4>
       </div>
       <div class="modal-body">
         <div class="row">
             <div class="col-xs-12 form-group" ng-show="SCREENS.login_mode == 'register'">
                 <div class="form-group">
-                    <input type="text" placeholder="Username" class="form-control" ng-model="username">
+                    <input type="text" placeholder="Username" class="form-control" ng-model="SIGNIN.username">
                 </div>
 
                 <div class="form-group">
-                    <input type="password" placeholder="Password" class="form-control" ng-model="password">
+                    <input type="password" placeholder="Password" class="form-control" ng-model="SIGNIN.password">
                 </div>
 
                 <div class="form-group">
-                    <input type="password" placeholder="Confirm Password" class="form-control" ng-model="confirm_password">
+                    <input type="password" placeholder="Confirm Password" class="form-control" ng-model="SIGNIN.confirm_password">
                 </div>
 
-                <span style="font-size: 11px; color: #aa0000;" ng-show="password != confirm_password">Passwords don't match</span>
+                <span class="signin_error" ng-show="SIGNIN.password != SIGNIN.confirm_password">Passwords don't match</span>
+                <span class="signin_error" ng-show="!nullOrEmpty(SIGNIN.signup_error)">{{SIGNIN.signup_error}}</span>
             </div>
 
             <div class="col-xs-12 form-group" ng-show="SCREENS.login_mode == 'login'">
                 <div class="form-group">
-                    <input type="text" placeholder="Username" class="form-control" ng-model="username">
+                    <input type="text" placeholder="Username" class="form-control" ng-model="SIGNIN.username">
                 </div>
 
                 <div class="form-group">
-                    <input type="password" placeholder="Password" class="form-control" ng-model="password">
+                    <input type="password" placeholder="Password" class="form-control" ng-model="SIGNIN.password">
                 </div>
 
+                <span class="signin_error" ng-show="!nullOrEmpty(SIGNIN.signin_error)">{{SIGNIN.signin_error}}</span>
+
+                <span class="signup_success" ng-show="SIGNIN.signup_success">
+                    <i class="fa fa-check"></i>
+                    Your account has been successfully created
+                </span>
             </div>
         </div>
 
