--- a/public/vishwakarma.html
+++ b/public/vishwakarma.html
@@ -25,6 +25,9 @@
         <li ng-class="{active: SCREENS.active_screen == 'view_projects'}">
             <a href="javascript:void(0);" ng-click="SCREENS.active_screen = 'view_projects'">Home</a>
         </li>
+        <li ng-class="{active: SCREENS.active_screen == 'manage_users'}">
+            <a href="javascript:void(0);" ng-click="show_manage_users_pane()">Users & Groups</a>
+        </li>
         <li ng-class="{active: SCREENS.active_screen == 'view_logs'}">
             <a href="javascript:void(0);" ng-click="SCREENS.active_screen = 'view_logs'">Logs</a>
         </li>
@@ -162,8 +165,13 @@
                         </table>
 
                     </div>
-                    <div class="row" style="padding-left: 10px;">
 
+                    <div class="header row">
+                        Manage Groups & Permissions
+                    </div>
+
+                    <div class="row" style="text-align: center;">
+                        <a href="javascript:void(0);" ng-click="show_manage_prjgrp_pane()">View & Edit Permissions</a>
                     </div>
                 </div>
             </div>
@@ -434,7 +442,7 @@
                 <button class="btn btn-primary" ng-click="init_new_group()" ng-hide="USERS.user_view == 'add_users_to_group'">New Group</button>
 
                 <span ng-show="USERS.user_view == 'add_users_to_group'">
-                    <button class="btn btn-default" ng-click="">Close</button>
+                    <button class="btn btn-default" ng-click="USERS.user_view = ''">Close</button>
                     <button class="btn btn-success" ng-click="add_users_to_group()">Save Changes</button>
                 </span>
             </span>
@@ -492,6 +500,56 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+<!-- Map groups to project -->
+<div class="big_dialog row crontab" ng-show="SCREENS.active_screen == 'project_group_map'">
+    <div class="col-xs-12">
+        <div class="header">
+            Add Permissions to Groups for Project: {{cur_project.name}}
+
+            <span class="pull-right">
+                <button class="btn btn-primary" ng-click="add_grpprj_row()">Add Row</button>
+                <button class="btn btn-success" ng-click="save_grpprj()" ng-disabled="GRPPRJ.saving_groups()">
+                    <img src="/images/loader_circle.gif" ng-show="GRPPRJ.saving_groups">
+                    Save
+                </button>
+                <button class="btn btn-default">Close</button>
+            </span>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Group</th>
+                            <th>Hide</th>
+                            <th>Read</th>
+                            <th>Edit</th>
+                            <th>Run</th>
+                            <th>Abort</th>
+                            <th>See Logs</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="(key, prjgrp) in GRPPRJ.grpprjmap">
+                            <td><select ng-options="group.group as group.group for (key, group) in USERS.groups" ng-model="prjgrp.group"></select></td>
+                            <td><input type="checkbox" ng-model="prjgrp.see"></td>
+                            <td><input type="checkbox" ng-model="prjgrp.get"></td>
+                            <td><input type="checkbox" ng-model="prjgrp.edit"></td>
+                            <td><input type="checkbox" ng-model="prjgrp.run"></td>
+                            <td><input type="checkbox" ng-model="prjgrp.abort"></td>
+                            <td><input type="checkbox" ng-model="prjgrp.logs"></td>
+                            <td><button class="btn btn-danger"><i class="fa fa-minus"></i></button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
     </div>
 </div>
 
