--- a/public/vishwakarma.html
+++ b/public/vishwakarma.html
@@ -31,7 +31,7 @@
         <li ng-class="{active: SCREENS.active_screen == 'view_logs'}">
             <a href="javascript:void(0);" ng-click="SCREENS.active_screen = 'view_logs'">Logs</a>
         </li>
-        <li><a href="javascript:void(0);">Help</a></li>
+        <li><a href="javascript:void(0);">Docs</a></li>
         <li><a href="javascript:void(0);">About</a></li>
       </ul>
     </nav>
@@ -39,7 +39,7 @@
 </header>
 
 <div class="error_msg" ng-show="show_error">
-    {{error_msg}} <a href="javascript:void(0);">Reload</a>
+    {{error_msg}} <a href="javascript:void(0);" onclick="window.location.reload()">Reload</a>
 </div>
 
 <!-- Home - View Projects -->
