--- a/public/docs.html
+++ b/public/docs.html
@@ -43,6 +43,8 @@
                     <li><a href="javascript:void(0);">Manage Groups & Permissions</a></li>
                 </ul>
             </li>
+            <li><a href="javascript:void(0);">Logs</a></li>
+
         </ul>
     </div>
     <div class="col-xs-9" style="border-left: solid 1px #ccc; height: calc(100% - 100px); overflow: auto; padding: 20px 25px; ">
@@ -102,7 +104,7 @@
             <p>Admins get all privileges to all projects by default</p>
         </div>
 
-        <div class="section">
+        <div class="section hide">
             <h3>Creating Projects</h3>
             <p>In Vishwakarma, only admins can create projects</p>
 
@@ -143,6 +145,10 @@
                     <li><strong>See Logs</strong> - Groups with See Logs privilege can see logs of projects, running and historic</li>
                 </ul>
             </p>
+        </div>
+
+        <div class="section">
+            <h3>Logs</h3>
         </div>
 
         <div>
